resolvendo overflow de contents de pages e da home

--- a/wp-content/themes/encontros-theme/css/estilo.css
+++ b/wp-content/themes/encontros-theme/css/estilo.css
@@ -131,7 +131,7 @@ margin-bottom: 20px;
 
 #content.home {
 margin: 0 0 0 40px;
-
+overflow: visible;
 }
 
 #cabecalho {
